# simulation

./: .gitignore
cell_sim/: Cargo.toml  build.sh
cell_sim/src/: cell.rs  main.rs  scene.rs
cell_sim/src/cell/: base_processes.rs  cell_base.rs  cell_bundle.rs  cell_components.rs  cell_internals.rs  component_instances.rs  ctl.rs  mod.rs  rna.rs  weights.rs
