[package]
name = "cell_sim"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = false

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# WARNGING: Remove linking feature when releasing
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_xpbd_2d = "0.3.2"
rand = "0.8.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
