cargo-features = ["profile-rustflags"]

[package]
name = "cell_sim"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
rustflags = ["-C", "target-cpu=native"]

#[profile.crazy]
#opt-level = 3
#lto = "fat"
#debug = false
#debug-assertions = false
#overflow-checks = false

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# WARNGING: Remove linking feature when releasing
bevy = { version = "0.12", "dynamic_linking"] }
#bevy = "*"
# TODO switch from stable to nightly when packed_simd_2 is switched to packed_simd (issue #456)
bevy_rapier2d = { version = "0.23", features = ["simd-stable", "parallel"] }
rand = "0.8.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
